Excelerator/ANTLR/ArithmeticGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from .\ArithmeticGrammar.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class ArithmeticGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, POW=6, MULT=7, DIV=8, PLUS=9, 
		MINUS=10, MOD=11, CELL=12, NUMBER=13, COLTITLE=14, WS=15, SYMBOL=16;
	public const int
		RULE_expression = 0, RULE_component = 1;
	public static readonly string[] ruleNames = {
		"expression", "component"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "')'", "'min('", "','", "'max('", "'^'", "'*'", "'/'", "'+'", 
		"'-'", "'%'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, "POW", "MULT", "DIV", "PLUS", "MINUS", 
		"MOD", "CELL", "NUMBER", "COLTITLE", "WS", "SYMBOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ArithmeticGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ArithmeticGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ArithmeticGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ArithmeticGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ComponentContext component() {
			return GetRuleContext<ComponentContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ArithmeticGrammarParser.Eof, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitExpression(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		ExpressionContext _localctx = new ExpressionContext(Context, State);
		EnterRule(_localctx, 0, RULE_expression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 4; component(0);
			State = 5; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ComponentContext : ParserRuleContext {
		public ComponentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_component; } }
	 
		public ComponentContext() { }
		public virtual void CopyFrom(ComponentContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class ParenthesisContext : ComponentContext {
		public ComponentContext component() {
			return GetRuleContext<ComponentContext>(0);
		}
		public ParenthesisContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterParenthesis(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitParenthesis(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenthesis(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NegativeNumberContext : ComponentContext {
		public ITerminalNode MINUS() { return GetToken(ArithmeticGrammarParser.MINUS, 0); }
		public ITerminalNode NUMBER() { return GetToken(ArithmeticGrammarParser.NUMBER, 0); }
		public NegativeNumberContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterNegativeNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitNegativeNumber(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNegativeNumber(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MinimumContext : ComponentContext {
		public ComponentContext[] component() {
			return GetRuleContexts<ComponentContext>();
		}
		public ComponentContext component(int i) {
			return GetRuleContext<ComponentContext>(i);
		}
		public MinimumContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterMinimum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitMinimum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMinimum(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MaximumContext : ComponentContext {
		public ComponentContext[] component() {
			return GetRuleContexts<ComponentContext>();
		}
		public ComponentContext component(int i) {
			return GetRuleContext<ComponentContext>(i);
		}
		public MaximumContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterMaximum(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitMaximum(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMaximum(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class RestContext : ComponentContext {
		public ITerminalNode SYMBOL() { return GetToken(ArithmeticGrammarParser.SYMBOL, 0); }
		public RestContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterRest(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitRest(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRest(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class MultiplicationContext : ComponentContext {
		public IToken operatorToken;
		public ComponentContext[] component() {
			return GetRuleContexts<ComponentContext>();
		}
		public ComponentContext component(int i) {
			return GetRuleContext<ComponentContext>(i);
		}
		public ITerminalNode DIV() { return GetToken(ArithmeticGrammarParser.DIV, 0); }
		public ITerminalNode MULT() { return GetToken(ArithmeticGrammarParser.MULT, 0); }
		public MultiplicationContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterMultiplication(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitMultiplication(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMultiplication(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AdditionContext : ComponentContext {
		public IToken operatorToken;
		public ComponentContext[] component() {
			return GetRuleContexts<ComponentContext>();
		}
		public ComponentContext component(int i) {
			return GetRuleContext<ComponentContext>(i);
		}
		public ITerminalNode PLUS() { return GetToken(ArithmeticGrammarParser.PLUS, 0); }
		public ITerminalNode MINUS() { return GetToken(ArithmeticGrammarParser.MINUS, 0); }
		public AdditionContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterAddition(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitAddition(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAddition(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NumberContext : ComponentContext {
		public ITerminalNode NUMBER() { return GetToken(ArithmeticGrammarParser.NUMBER, 0); }
		public NumberContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitNumber(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ModuloContext : ComponentContext {
		public ComponentContext[] component() {
			return GetRuleContexts<ComponentContext>();
		}
		public ComponentContext component(int i) {
			return GetRuleContext<ComponentContext>(i);
		}
		public ITerminalNode MOD() { return GetToken(ArithmeticGrammarParser.MOD, 0); }
		public ModuloContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterModulo(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitModulo(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModulo(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class UnaryMinusContext : ComponentContext {
		public ITerminalNode MINUS() { return GetToken(ArithmeticGrammarParser.MINUS, 0); }
		public ComponentContext component() {
			return GetRuleContext<ComponentContext>(0);
		}
		public UnaryMinusContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterUnaryMinus(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitUnaryMinus(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnaryMinus(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class CellContext : ComponentContext {
		public ITerminalNode CELL() { return GetToken(ArithmeticGrammarParser.CELL, 0); }
		public CellContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterCell(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitCell(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCell(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class PowerContext : ComponentContext {
		public ComponentContext[] component() {
			return GetRuleContexts<ComponentContext>();
		}
		public ComponentContext component(int i) {
			return GetRuleContext<ComponentContext>(i);
		}
		public ITerminalNode POW() { return GetToken(ArithmeticGrammarParser.POW, 0); }
		public PowerContext(ComponentContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.EnterPower(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IArithmeticGrammarListener typedListener = listener as IArithmeticGrammarListener;
			if (typedListener != null) typedListener.ExitPower(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IArithmeticGrammarVisitor<TResult> typedVisitor = visitor as IArithmeticGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPower(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ComponentContext component() {
		return component(0);
	}

	private ComponentContext component(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ComponentContext _localctx = new ComponentContext(Context, _parentState);
		ComponentContext _prevctx = _localctx;
		int _startState = 2;
		EnterRecursionRule(_localctx, 2, RULE_component, _p);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 49;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				{
				_localctx = new ParenthesisContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 8; Match(T__0);
				State = 9; component(0);
				State = 10; Match(T__1);
				}
				break;
			case 2:
				{
				_localctx = new NegativeNumberContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 12; Match(MINUS);
				State = 13; Match(NUMBER);
				}
				break;
			case 3:
				{
				_localctx = new UnaryMinusContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 14; Match(MINUS);
				State = 15; component(6);
				}
				break;
			case 4:
				{
				_localctx = new MinimumContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 16; Match(T__2);
				{
				State = 17; component(0);
				State = 18; Match(T__3);
				}
				State = 25;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 20; component(0);
						State = 21; Match(T__3);
						}
						} 
					}
					State = 27;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
				}
				State = 28; component(0);
				State = 29; Match(T__1);
				}
				break;
			case 5:
				{
				_localctx = new MaximumContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 31; Match(T__4);
				{
				State = 32; component(0);
				State = 33; Match(T__3);
				}
				State = 40;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						State = 35; component(0);
						State = 36; Match(T__3);
						}
						} 
					}
					State = 42;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
				}
				State = 43; component(0);
				State = 44; Match(T__1);
				}
				break;
			case 6:
				{
				_localctx = new NumberContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 46; Match(NUMBER);
				}
				break;
			case 7:
				{
				_localctx = new CellContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 47; Match(CELL);
				}
				break;
			case 8:
				{
				_localctx = new RestContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 48; Match(SYMBOL);
				}
				break;
			}
			Context.Stop = TokenStream.LT(-1);
			State = 65;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 63;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
					case 1:
						{
						_localctx = new PowerContext(new ComponentContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_component);
						State = 51;
						if (!(Precpred(Context, 11))) throw new FailedPredicateException(this, "Precpred(Context, 11)");
						State = 52; Match(POW);
						State = 53; component(12);
						}
						break;
					case 2:
						{
						_localctx = new MultiplicationContext(new ComponentContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_component);
						State = 54;
						if (!(Precpred(Context, 10))) throw new FailedPredicateException(this, "Precpred(Context, 10)");
						State = 55;
						((MultiplicationContext)_localctx).operatorToken = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==MULT || _la==DIV) ) {
							((MultiplicationContext)_localctx).operatorToken = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 56; component(11);
						}
						break;
					case 3:
						{
						_localctx = new AdditionContext(new ComponentContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_component);
						State = 57;
						if (!(Precpred(Context, 9))) throw new FailedPredicateException(this, "Precpred(Context, 9)");
						State = 58;
						((AdditionContext)_localctx).operatorToken = TokenStream.LT(1);
						_la = TokenStream.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
							((AdditionContext)_localctx).operatorToken = ErrorHandler.RecoverInline(this);
						}
						else {
							ErrorHandler.ReportMatch(this);
						    Consume();
						}
						State = 59; component(10);
						}
						break;
					case 4:
						{
						_localctx = new ModuloContext(new ComponentContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_component);
						State = 60;
						if (!(Precpred(Context, 8))) throw new FailedPredicateException(this, "Precpred(Context, 8)");
						State = 61; Match(MOD);
						State = 62; component(9);
						}
						break;
					}
					} 
				}
				State = 67;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,4,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public override bool Sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 1: return component_sempred((ComponentContext)_localctx, predIndex);
		}
		return true;
	}
	private bool component_sempred(ComponentContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0: return Precpred(Context, 11);
		case 1: return Precpred(Context, 10);
		case 2: return Precpred(Context, 9);
		case 3: return Precpred(Context, 8);
		}
		return true;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
